lab00 writeup revisions

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,6 +10,7 @@
   <ul>
    <li><a href="https://gauchospace.ucsb.edu">Gauchospace</a></li>
    <li><a href="https://piazza.com/university_of_california_santa_barbara/spring2018/cs24s18/home">Piazza</a></li>
+   <li><a href="https://github.com/ucsb-cs24-s18">Github</a></li>
   </ul>
  </nav>
  {% if page.layout == "hwk" %}
